Include Docker presentation files

--- a/rapports/etat_de_l_art_mi_projet/etat_de_l_art_mi_projet.tex
+++ b/rapports/etat_de_l_art_mi_projet/etat_de_l_art_mi_projet.tex
@@ -164,7 +164,8 @@ De manière plus précise, ce projet vise à maitriser les parties suivantes:
 
 L'objectif de ce document est d'énumérer les différentes techniques tentées pour (cross-)compiler Docker sur une cible ARM. De cette manière, le lecteur, en cas de reprise du projet ou par simple curiosité, aura une idée des pistes à explorer ou à éviter.
 
-
+\chapter{Présentation de Docker}
+\input{../presentation-docker}
 
 \chapter{Objectif 1 - Construction d'un système GNU/Linux Docker-ready}
 
