--- a/rapports/report/report_docker_marigliano.tex
+++ b/rapports/report/report_docker_marigliano.tex
@@ -179,6 +179,8 @@ Ce document se concentre, dès lors, sur le dernier point ainsi que sur le déro
 
 TODO: inclure un .tex séparé commun aux deux rapports
 
+\input{../presentation-docker}
+
 \chapter{Objectif 3 - TODO}
 
 \section{Situation actuelle}
