update report structure

--- a/rapports/presentation-docker.tex
+++ b/rapports/presentation-docker.tex
@@ -2,6 +2,10 @@
 
 TODO
 
-\section{Principe}
+\section{Containers vs machines virtuelles}
 
-TODO
+TODO    
+
+\section{Système de fichiers en couche}
+
+TODO dire voir rapport Loic + ajouter en bibtex
