--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -1,3 +1,4 @@
+\usepackage[french]{babel}
 @book{mouat_2005,
 title={Using Docker},
 publisher={O'Reilly Media},
@@ -9,5 +10,15 @@ year={2005}
 author={Center for Internet Security},
 title={{CIS Docker 1.11.0 Benchmark}},
 note={\url{https://benchmarks.cisecurity.org/tools2/docker/cis_docker_1.11.0_benchmark_v1.0.0.pdf}},
-year={2016}
+year={2016},
+month={avril}
+}
+
+@misc{docker-for-beginners,
+title={Docker for Beginners},
+note={\url{http://prakhar.me/docker-curriculum/}},
+journal={Docker for Beginners},
+author={Prakhar Srivastav},
+year={2016},
+month={avril}
 }
