Write ODROID XU3 chapter

--- a/rapports/presentation-docker.tex
+++ b/rapports/presentation-docker.tex
@@ -9,3 +9,10 @@ TODO
 \section{Système de fichiers en couche}
 
 TODO dire voir rapport Loic + ajouter en bibtex
+
+
+\section{Dockerfile}
+TODO
+
+\section{Contraintes liées au monde de l'embarqué}
+TODO
