--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -22,3 +22,9 @@ author={Prakhar Srivastav},
 year={2016},
 month={avril}
 }
+
+@misc{arch_linux_arm,
+title={ODROID-XU3},
+url={https://archlinuxarm.org/platforms/armv7/samsung/odroid-xu3}, 
+journal={Arch Linux ARM}} 
+
